# CommonDataIOInterface

./: CMakeLists.txt
DataProcess/: CMakeLists.txt  DataIO.cpp  DataIO.h  DataProcess.cpp
Utilities/: CMakeLists.txt  Utilities.h
